--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-562.3KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.90MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.78MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.12MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.26MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-967.2KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-420.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇫🇷 法国-524.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-562.3KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-715.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-7.59MB/s(Youtube:不良林), server: bpjchongkong.kozow.com, port: 12353, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjchongkong.kozow.com}}
+  - {name: 🇮🇳 印度-1.61MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-967.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-420.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-524.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-715.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-967.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-420.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-524.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-715.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-967.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-420.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-524.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-715.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-7.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-967.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-420.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-524.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-715.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-967.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-420.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-524.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-715.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-967.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-420.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-524.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-715.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-967.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-420.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-524.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-715.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
