--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-160.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-461.8KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
   - {name: 🇬🇧 英国-495.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-358.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 台湾-6.69MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-209.4KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.64MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
